<resources>
    <string name="app_name">RecycleClient</string>
    <string name="fragment_recycle_appointment">预约</string>
    <string name="fragment_recycle_date">选择预约日期</string>
    <string name="fragment_recycle_time">选择预约时间</string>
    <string name="fragment_recycle_address">请输入地址</string>
    <string name="personal_fragment_integral_record">积分记录</string>
    <string name="personal_fragment_information">邮寄信息</string>
    <string name="personal_fragment_exit">退出当前用户</string>
    <string name="personal_fragment_modify">点击头像查看个人信息</string>
    <string name="fragment_recycle_amount">请输入回收数量</string>
    <string name="fragment_recycle_cancel_order">取消预约</string>
    <string name="fragment_activity_activity_id">输入活动编号</string>
    <string name="appointment_history_layout_history_order">历史订单</string>
    <string name="appointment_history_layout_back">返回</string>
    <string name="appointment_item_cancel">取消</string>
    <string name="recycle_fragment_history_appointment">历史订单</string>
    <string name="fragment_activity_my_activity">查看我参加的活动</string>
    <string name="fragment_activity_category">活动分类</string>
    <string name="fragment_activity_recommend">推荐活动</string>
    <string name="activity_category_category">分类活动</string>
    <string name="category_item_sign">报名</string>
    <string name="activity_history_item_cancel_sign">取消报名</string>
    <string name="activity_history_layout_history">历史报名活动</string>
    <string name="fragment_integral_exchange_record">兑换记录</string>
    <string name="fragment_integral_integral_sort">积分排名</string>
    <string name="fragment_integral_search">搜索兑换商品</string>
    <string name="activity_mailing_information_back">返回</string>
    <string name="activity_mailing_information_mailing">邮寄信息</string>
    <string name="activity_mailing_information_confirm">确定</string>
    <string name="activity_mailing_information_contact">请输入收货人姓名</string>
    <string name="activity_mailing_information_location">请输入邮寄地址</string>
    <string name="activity_mailing_information_phone">请输入收货人电话号码</string>
    <string name="exchange_record_sort">用户积分排名</string>
    <string name="exchange_record_back">返回</string>
    <string name="exchange_record_record">商品兑换记录</string>
    <string name="record_item_cancel_exchange">取消兑换</string>
    <string name="activity_integral_record_back">返回</string>
    <string name="activity_integral_record_record">积分记录</string>
    <string name="activity_personal_information_information">个人信息</string>
    <string name="activity_personal_information_back">返回</string>
    <string name="activity_personal_information_name">姓名</string>
    <string name="activity_personal_information_password">密码</string>
    <string name="activity_personal_information_integral">积分</string>
    <string name="activity_personal_information_phone">电话号码</string>
    <string name="activity_personal_information_like">获赞数</string>
    <string name="activity_main_slogan">智回科技</string>
    <string name="activity_login_username">请输入手机号</string>
    <string name="activity_login_password">请输入密码</string>
    <string name="activity_login_login">登录</string>
</resources>