<?xml version="1.0" encoding="utf-8"?>
<!--登录-->
<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:textSize="15sp"
        android:layout_height="40dp"
        android:hint="@string/activity_login_username"
        android:inputType="text"
        android:lines="1"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="20%"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:textSize="15sp"
        android:layout_height="40dp"
        android:hint="@string/activity_login_password"
        android:inputType="textPassword"
        android:lines="1"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="30%"/>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0B8B19"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="50%"
        android:text="@string/activity_login_login"/>

</androidx.percentlayout.widget.PercentRelativeLayout>