<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">


    <FrameLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/searchActivity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/fragment_activity_activity_id"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionSearch"/>
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBarLayout"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/residentActivity"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/fragment_activity_my_activity"
        android:textSize="30sp"
        android:textColor="#0B8B19"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/idRecyclerView"
        />
    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_activity_category"
        android:textSize="20sp"
        android:textColor="#0B8B19"
        android:gravity="center"
        android:layout_below="@id/residentActivity"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"/>
    <TextView
        android:id="@+id/recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_activity_recommend"
        android:textSize="20sp"
        android:textColor="#0B8B19"
        android:gravity="center"
        android:layout_below="@id/categoryRecyclerView"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recommend"/>

</RelativeLayout>