<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/modify"
        android:background="@drawable/ic_launcher_background"
        android:stateListAnimator="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="15%"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="30%"/>
    <TextView
        android:text="@string/personal_fragment_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/exit"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_fragment_exit"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:backgroundTint="#197b30"/>
    <Button
        android:id="@+id/update"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_fragment_information"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:backgroundTint="#197b30"/>
    <Button
        android:id="@+id/about"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_fragment_help"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:backgroundTint="#197b30"/>

</androidx.percentlayout.widget.PercentRelativeLayout>