<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">
    <EditText
        android:id="@+id/searchGift"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/fragment_integral_search"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionSearch"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchGift"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/integral"
        android:layout_width="wrap_content"
        android:textSize="80sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_below="@id/searchRecyclerView"
        android:lines="1"/>
    <Button
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_integral_exchange_record"
        android:layout_below="@id/integral"
        android:layout_marginStart="50sp"
        android:backgroundTint="#0B8B19"/>
    <Button
        android:id="@+id/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_integral_integral_sort"
        android:layout_below="@id/integral"
        android:layout_marginStart="250sp"
        android:backgroundTint="#0B8B19"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/marketRecyclerView"
        android:layout_below="@id/record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>